# Parser-Combinators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  combinator.cpp  combinator.hpp  let_atom.ark  main.cpp  node.cpp  node.hpp  parser.cpp  parser.hpp
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp  build.sh  run  simple.ark
benchmarks/legacy/: big.ark  simple.ark
legacy_parser/include/: Constants.hpp  Exceptions.hpp  Files.hpp  Utils.hpp  utf8_decoder.h
legacy_parser/include/Compiler/AST/: Lexer.hpp  Node.hpp  Parser.hpp  makeErrorCtx.hpp
legacy_parser/src/Compiler/AST/: Lexer.cpp  Node.cpp  Parser.cpp  makeErrorCtx.cpp
src/: baseparser.cpp  baseparser.hpp  combinator.cpp  combinator.hpp  main.cpp  node.cpp  node.hpp  parser.cpp  parser.hpp  predicates.hpp  utf8_char.hpp  utils.hpp
tests/: begin.ark  begin.expected  call.ark  call.expected  closure.ark  closure.expected  del.ark  del.expected  fields.ark  fields.expected  fun.ark  fun.expected  huge_number.expected  if.ark  if.expected  import.ark  import.expected  incomplete.expected  incomplete_1.expected  incomplete_2.expected  incomplete_3.expected  incomplete_4.expected  incomplete_5.expected  incomplete_7.expected  incomplete_8.expected  incomplete_9.expected  incomplete_arguments.expected  incomplete_begin.expected  incomplete_import_2.expected  incomplete_macro.expected  incomplete_macro_arguments.expected  incomplete_macro_spread.expected  incomplete_package_name.expected  incorrect_1.expected  incorrect_3.expected  incorrect_arg_capture.expected  let_atom.ark  let_atom.expected  list.ark  loop.ark  (+6 more)
